# dmScreen

./: .gitignore  Dockerfile  README.md  connect-wifi.sh  dmScreen-start.sh  forget-wifi.sh  install.sh  pyproject.toml  run_docker.sh  start-ap.sh  stop-ap.sh  wifi-check.sh
data/www/: admin.html  view.html
data/www/js/: admin.js
src/dmScreen/: __main__.py  cache_worker.py  database.py  server.py  updater.py  wifi.py
src/dmScreen/www/: admin.html  view.html
src/dmScreen/www/css/: style.css
src/dmScreen/www/js/: admin.js  view.js
